add form login admin page

--- a/WebShop/WebShop.csproj
+++ b/WebShop/WebShop.csproj
@@ -136,12 +136,18 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Catalog\UserDAO.cs" />
+    <Compile Include="Areas\Admin\Controllers\AuthController.cs" />
+    <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
     <Compile Include="Areas\Admin\Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Library\MyMessage.cs" />
+    <Compile Include="Library\Encryptor.cs" />
+    <Compile Include="Models\Account.cs">
+      <DependentUpon>QuanLyShopFood.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ChiTietDonHang.cs">
       <DependentUpon>QuanLyShopFood.tt</DependentUpon>
     </Compile>
@@ -243,6 +249,7 @@
     <Content Include="Areas\Admin\Views\Dashboard\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Dashboard\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Dashboard\Trash.cshtml" />
+    <Content Include="Areas\Admin\Views\Auth\Login.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -269,7 +276,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\Base\" />
     <Folder Include="Public\images\" />
   </ItemGroup>
   <ItemGroup>
